@@ -248,6 +248,26 @@ name|MIN_PREFIX_CHARS
 init|=
 literal|"minPrefixChars"
 decl_stmt|;
+comment|/**     * Boolean clause matching option for multiple terms     * Default is true - all terms required.     */
+DECL|field|ALL_TERMS_REQUIRED
+specifier|protected
+specifier|static
+specifier|final
+name|String
+name|ALL_TERMS_REQUIRED
+init|=
+literal|"allTermsRequired"
+decl_stmt|;
+comment|/** Highlight suggest terms  - default is true. */
+DECL|field|HIGHLIGHT
+specifier|protected
+specifier|static
+specifier|final
+name|String
+name|HIGHLIGHT
+init|=
+literal|"highlight"
+decl_stmt|;
 comment|/**     * Default path where the index for the suggester is stored/loaded from    * */
 DECL|field|DEFAULT_INDEX_PATH
 specifier|private
@@ -450,6 +470,68 @@ name|AnalyzingInfixSuggester
 operator|.
 name|DEFAULT_MIN_PREFIX_CHARS
 decl_stmt|;
+name|boolean
+name|allTermsRequired
+init|=
+name|params
+operator|.
+name|get
+argument_list|(
+name|ALL_TERMS_REQUIRED
+argument_list|)
+operator|!=
+literal|null
+condition|?
+name|Boolean
+operator|.
+name|getBoolean
+argument_list|(
+name|params
+operator|.
+name|get
+argument_list|(
+name|ALL_TERMS_REQUIRED
+argument_list|)
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+else|:
+name|AnalyzingInfixSuggester
+operator|.
+name|DEFAULT_ALL_TERMS_REQUIRED
+decl_stmt|;
+name|boolean
+name|highlight
+init|=
+name|params
+operator|.
+name|get
+argument_list|(
+name|HIGHLIGHT
+argument_list|)
+operator|!=
+literal|null
+condition|?
+name|Boolean
+operator|.
+name|getBoolean
+argument_list|(
+name|params
+operator|.
+name|get
+argument_list|(
+name|HIGHLIGHT
+argument_list|)
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+else|:
+name|AnalyzingInfixSuggester
+operator|.
+name|DEFAULT_HIGHLIGHT
+decl_stmt|;
 try|try
 block|{
 return|return
@@ -477,6 +559,10 @@ argument_list|,
 name|minPrefixChars
 argument_list|,
 literal|true
+argument_list|,
+name|allTermsRequired
+argument_list|,
+name|highlight
 argument_list|)
 block|{
 annotation|@
