@@ -462,6 +462,68 @@ name|AnalyzingInfixSuggester
 operator|.
 name|DEFAULT_MIN_PREFIX_CHARS
 decl_stmt|;
+name|boolean
+name|allTermsRequired
+init|=
+name|params
+operator|.
+name|get
+argument_list|(
+name|ALL_TERMS_REQUIRED
+argument_list|)
+operator|!=
+literal|null
+condition|?
+name|Boolean
+operator|.
+name|getBoolean
+argument_list|(
+name|params
+operator|.
+name|get
+argument_list|(
+name|ALL_TERMS_REQUIRED
+argument_list|)
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+else|:
+name|AnalyzingInfixSuggester
+operator|.
+name|DEFAULT_ALL_TERMS_REQUIRED
+decl_stmt|;
+name|boolean
+name|highlight
+init|=
+name|params
+operator|.
+name|get
+argument_list|(
+name|HIGHLIGHT
+argument_list|)
+operator|!=
+literal|null
+condition|?
+name|Boolean
+operator|.
+name|getBoolean
+argument_list|(
+name|params
+operator|.
+name|get
+argument_list|(
+name|HIGHLIGHT
+argument_list|)
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+else|:
+name|AnalyzingInfixSuggester
+operator|.
+name|DEFAULT_HIGHLIGHT
+decl_stmt|;
 name|BlenderType
 name|blenderType
 init|=
@@ -537,6 +599,10 @@ argument_list|,
 name|numFactor
 argument_list|,
 literal|true
+argument_list|,
+name|allTermsRequired
+argument_list|,
+name|highlight
 argument_list|)
 block|{
 annotation|@
