@@ -72,6 +72,14 @@ name|URI_DEFAULT
 init|=
 literal|"/infix_suggest_analyzing"
 decl_stmt|;
+DECL|field|URI_SUGGEST_DEFAULT
+specifier|static
+specifier|final
+name|String
+name|URI_SUGGEST_DEFAULT
+init|=
+literal|"/analyzing_infix_suggest"
+decl_stmt|;
 annotation|@
 name|BeforeClass
 DECL|method|beforeClass
@@ -105,6 +113,26 @@ argument_list|,
 name|SpellingParams
 operator|.
 name|SPELLCHECK_BUILD
+argument_list|,
+literal|"true"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"qt"
+argument_list|,
+name|URI_SUGGEST_DEFAULT
+argument_list|,
+literal|"q"
+argument_list|,
+literal|""
+argument_list|,
+name|SuggesterParams
+operator|.
+name|SUGGEST_BUILD_ALL
 argument_list|,
 literal|"true"
 argument_list|)
@@ -165,6 +193,67 @@ argument_list|,
 literal|"//lst[@name='spellcheck']/lst[@name='suggestions']/lst[@name='high']/int[@name='numFound'][.='1']"
 argument_list|,
 literal|"//lst[@name='spellcheck']/lst[@name='suggestions']/lst[@name='high']/arr[@name='suggestion']/str[1][.='Japanese Autocomplete and Japanese<b>High</b>lighter broken']"
+argument_list|)
+expr_stmt|;
+comment|/* equivalent SolrSuggester, SuggestComponent tests */
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"qt"
+argument_list|,
+name|URI_SUGGEST_DEFAULT
+argument_list|,
+literal|"q"
+argument_list|,
+literal|"japan"
+argument_list|,
+name|SuggesterParams
+operator|.
+name|SUGGEST_COUNT
+argument_list|,
+literal|"1"
+argument_list|,
+name|SuggesterParams
+operator|.
+name|SUGGEST_DICT
+argument_list|,
+literal|"analyzing_infix_suggest_default"
+argument_list|)
+argument_list|,
+literal|"//lst[@name='suggest']/lst[@name='analyzing_infix_suggest_default']/lst[@name='japan']/int[@name='numFound'][.='1']"
+argument_list|,
+literal|"//lst[@name='suggest']/lst[@name='analyzing_infix_suggest_default']/lst[@name='japan']/arr[@name='suggestions']/lst[1]/str[@name='term'][.='<b>Japan</b>ese Autocomplete and<b>Japan</b>ese Highlighter broken']"
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"qt"
+argument_list|,
+name|URI_SUGGEST_DEFAULT
+argument_list|,
+literal|"q"
+argument_list|,
+literal|"high"
+argument_list|,
+name|SuggesterParams
+operator|.
+name|SUGGEST_COUNT
+argument_list|,
+literal|"1"
+argument_list|,
+name|SuggesterParams
+operator|.
+name|SUGGEST_DICT
+argument_list|,
+literal|"analyzing_infix_suggest_default"
+argument_list|)
+argument_list|,
+literal|"//lst[@name='suggest']/lst[@name='analyzing_infix_suggest_default']/lst[@name='high']/int[@name='numFound'][.='1']"
+argument_list|,
+literal|"//lst[@name='suggest']/lst[@name='analyzing_infix_suggest_default']/lst[@name='high']/arr[@name='suggestions']/lst[1]/str[@name='term'][.='Japanese Autocomplete and Japanese<b>High</b>lighter broken']"
 argument_list|)
 expr_stmt|;
 block|}
@@ -256,6 +345,187 @@ argument_list|,
 literal|"//lst[@name='spellcheck']/lst[@name='suggestions']/lst[@name='japan']/arr[@name='suggestion']/str[2][.='Add<b>Japan</b>ese Kanji number normalization to Kuromoji']"
 argument_list|,
 literal|"//lst[@name='spellcheck']/lst[@name='suggestions']/lst[@name='japan']/arr[@name='suggestion']/str[3][.='Add decompose compound<b>Japan</b>ese Katakana token capability to Kuromoji']"
+argument_list|)
+expr_stmt|;
+comment|/* SolrSuggester, SuggestComponent tests: allTermsRequire (true), highlight (true) */
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"qt"
+argument_list|,
+name|URI_SUGGEST_DEFAULT
+argument_list|,
+literal|"q"
+argument_list|,
+literal|"japan"
+argument_list|,
+name|SuggesterParams
+operator|.
+name|SUGGEST_COUNT
+argument_list|,
+literal|"2"
+argument_list|,
+name|SuggesterParams
+operator|.
+name|SUGGEST_DICT
+argument_list|,
+literal|"analyzing_infix_suggest_default"
+argument_list|)
+argument_list|,
+literal|"//lst[@name='suggest']/lst[@name='analyzing_infix_suggest_default']/lst[@name='japan']/int[@name='numFound'][.='2']"
+argument_list|,
+literal|"//lst[@name='suggest']/lst[@name='analyzing_infix_suggest_default']/lst[@name='japan']/arr[@name='suggestions']/lst[1]/str[@name='term'][.='<b>Japan</b>ese Autocomplete and<b>Japan</b>ese Highlighter broken']"
+argument_list|,
+literal|"//lst[@name='suggest']/lst[@name='analyzing_infix_suggest_default']/lst[@name='japan']/arr[@name='suggestions']/lst[2]/str[@name='term'][.='Add<b>Japan</b>ese Kanji number normalization to Kuromoji']"
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"qt"
+argument_list|,
+name|URI_SUGGEST_DEFAULT
+argument_list|,
+literal|"q"
+argument_list|,
+literal|"japanese ka"
+argument_list|,
+name|SuggesterParams
+operator|.
+name|SUGGEST_COUNT
+argument_list|,
+literal|"2"
+argument_list|,
+name|SuggesterParams
+operator|.
+name|SUGGEST_DICT
+argument_list|,
+literal|"analyzing_infix_suggest_default"
+argument_list|)
+argument_list|,
+literal|"//lst[@name='suggest']/lst[@name='analyzing_infix_suggest_default']/lst[@name='japanese ka']/int[@name='numFound'][.='2']"
+argument_list|,
+literal|"//lst[@name='suggest']/lst[@name='analyzing_infix_suggest_default']/lst[@name='japanese ka']/arr[@name='suggestions']/lst[1]/str[@name='term'][.='Add<b>Japanese</b><b>Ka</b>nji number normalization to Kuromoji']"
+argument_list|,
+literal|"//lst[@name='suggest']/lst[@name='analyzing_infix_suggest_default']/lst[@name='japanese ka']/arr[@name='suggestions']/lst[2]/str[@name='term'][.='Add decompose compound<b>Japanese</b><b>Ka</b>takana token capability to Kuromoji']"
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testWithoutHighlight
+specifier|public
+name|void
+name|testWithoutHighlight
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"qt"
+argument_list|,
+name|URI_SUGGEST_DEFAULT
+argument_list|,
+literal|"q"
+argument_list|,
+literal|"japan"
+argument_list|,
+name|SuggesterParams
+operator|.
+name|SUGGEST_COUNT
+argument_list|,
+literal|"2"
+argument_list|,
+name|SuggesterParams
+operator|.
+name|SUGGEST_DICT
+argument_list|,
+literal|"analyzing_infix_suggest_without_highlight"
+argument_list|)
+argument_list|,
+literal|"//lst[@name='suggest']/lst[@name='analyzing_infix_suggest_without_highlight']/lst[@name='japan']/int[@name='numFound'][.='2']"
+argument_list|,
+literal|"//lst[@name='suggest']/lst[@name='analyzing_infix_suggest_without_highlight']/lst[@name='japan']/arr[@name='suggestions']/lst[1]/str[@name='term'][.='Japanese Autocomplete and Japanese Highlighter broken']"
+argument_list|,
+literal|"//lst[@name='suggest']/lst[@name='analyzing_infix_suggest_without_highlight']/lst[@name='japan']/arr[@name='suggestions']/lst[2]/str[@name='term'][.='Add Japanese Kanji number normalization to Kuromoji']"
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testNotAllTermsRequired
+specifier|public
+name|void
+name|testNotAllTermsRequired
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"qt"
+argument_list|,
+name|URI_SUGGEST_DEFAULT
+argument_list|,
+literal|"q"
+argument_list|,
+literal|"japanese javanese"
+argument_list|,
+name|SuggesterParams
+operator|.
+name|SUGGEST_COUNT
+argument_list|,
+literal|"5"
+argument_list|,
+name|SuggesterParams
+operator|.
+name|SUGGEST_DICT
+argument_list|,
+literal|"analyzing_infix_suggest_not_all_terms_required"
+argument_list|)
+argument_list|,
+literal|"//lst[@name='suggest']/lst[@name='analyzing_infix_suggest_not_all_terms_required']/lst[@name='japanese javanese']/int[@name='numFound'][.='3']"
+argument_list|,
+literal|"//lst[@name='suggest']/lst[@name='analyzing_infix_suggest_not_all_terms_required']/lst[@name='japanese javanese']/arr[@name='suggestions']/lst[1]/str[@name='term'][.='<b>Japanese</b> Autocomplete and<b>Japanese</b> Highlighter broken']"
+argument_list|,
+literal|"//lst[@name='suggest']/lst[@name='analyzing_infix_suggest_not_all_terms_required']/lst[@name='japanese javanese']/arr[@name='suggestions']/lst[2]/str[@name='term'][.='Add<b>Japanese</b> Kanji number normalization to Kuromoji']"
+argument_list|,
+literal|"//lst[@name='suggest']/lst[@name='analyzing_infix_suggest_not_all_terms_required']/lst[@name='japanese javanese']/arr[@name='suggestions']/lst[3]/str[@name='term'][.='Add decompose compound<b>Japanese</b> Katakana token capability to Kuromoji']"
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+name|req
+argument_list|(
+literal|"qt"
+argument_list|,
+name|URI_SUGGEST_DEFAULT
+argument_list|,
+literal|"q"
+argument_list|,
+literal|"just number"
+argument_list|,
+name|SuggesterParams
+operator|.
+name|SUGGEST_COUNT
+argument_list|,
+literal|"5"
+argument_list|,
+name|SuggesterParams
+operator|.
+name|SUGGEST_DICT
+argument_list|,
+literal|"analyzing_infix_suggest_not_all_terms_required"
+argument_list|)
+argument_list|,
+literal|"//lst[@name='suggest']/lst[@name='analyzing_infix_suggest_not_all_terms_required']/lst[@name='just number']/int[@name='numFound'][.='2']"
+argument_list|,
+literal|"//lst[@name='suggest']/lst[@name='analyzing_infix_suggest_not_all_terms_required']/lst[@name='just number']/arr[@name='suggestions']/lst[1]/str[@name='term'][.='Add Japanese Kanji<b>number</b> normalization to Kuromoji']"
+argument_list|,
+literal|"//lst[@name='suggest']/lst[@name='analyzing_infix_suggest_not_all_terms_required']/lst[@name='just number']/arr[@name='suggestions']/lst[2]/str[@name='term'][.='This is<b>just</b> another entry!']"
 argument_list|)
 expr_stmt|;
 block|}
